--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<button id="mode-toggle">🌙 Dark Mode</button>
+
   <header>
     <h1>Ricky Losoya</h1>
     <p>Computer Science Student at Hartnell College</p>
@@ -22,11 +24,29 @@
     <h2>Projects</h2>
     <ul>
       <li>📘 Portfolio Website (this site🌝)</li>
-      <li>📊 Python CLI Grade Calculator</li>
-      <li>☁️ Weather App with JavaScript</li>
+      <li>Work in progress</li>
+      <li>Work in progress</li>
     </ul>
   </section>
-  
+
+    <section>
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML, CSS, JavaScript</li>
+      <li>Python, C++, JavaScript</li>
+      <li>Web Development</li>
+      <li>Problem Solving</li>
+      <li>Team Collaboration</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Education</h2>
+    <p>High School Diploma from North Salinas High School, Salinas, CA (May 2025)</p>
+    <p>Currently attending Hartnell College, Salinas, CA</p>
+    <p>Associate of Science in Computer Science (Expected May 2025)</p>
+  </section>
+
   <section>
     <h2>Contact</h2>
     <p>Email: ricardolosoya1@gmail.com</p>
@@ -34,7 +54,7 @@
     <p>LinkedIn: <a href="https://www.linkedin.com/in/ricardo-losoya-478507280/" target="_blank">Ricky Losoya</a></p>
     <p>Mobile Phone: 831-905-7140</p>
   </section>
-
+<script src="script.js"></script>
 </body>
 </html>
 
