Updated/Changed wording for skills and projects.

--- a/index.html
+++ b/index.html
@@ -17,24 +17,23 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Hi! I'm a CS student learning web development and programming with Python, C++, and JavaScript. I love building creative, useful tools.</p>
+    <p>Hi! I'm a CS student learning web development and programming with Python, C++, and JavaScript. I like building creative, useful tools.</p>
   </section>
 
   <section>
     <h2>Projects</h2>
     <ul>
       <li>📘 Portfolio Website (this site🌝)</li>
-      <li>Work in progress</li>
-      <li>Work in progress</li>
+      <li>⚔️ Turn based 2D RPG Game (In Progress - C++)</li>
+      <li>🎧 Custom MP3 Player (In Progress)</li>
     </ul>
   </section>
 
     <section>
     <h2>Skills</h2>
     <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>Python, C++, JavaScript</li>
-      <li>Web Development</li>
+      <li>Learning HTML, CSS</li>
+      <li>Learning Python, C++, JavaScript</li>
       <li>Problem Solving</li>
       <li>Team Collaboration</li>
     </ul>
