Changed education and  about me slightly.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Hi! I'm a CS student learning web development and programming with Python, C++, and JavaScript. I like building creative, useful tools.</p>
+    <p>Hi! I’m a computer science student passionate about web development and programming. I’m currently learning Python, C++, and JavaScript, and I enjoy building creative and useful things that I think would be cool.</p>
   </section>
 
   <section>
@@ -43,7 +43,7 @@
     <h2>Education</h2>
     <p>High School Diploma from North Salinas High School, Salinas, CA (May 2025)</p>
     <p>Currently attending Hartnell College, Salinas, CA</p>
-    <p>Associate of Science in Computer Science (Expected May 2025)</p>
+    <p>Associate degree in Computer Science (Expected May 2027)</p>
   </section>
 
   <section>
